k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: tax-calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumnMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumns:
        - name: postgres-storage
          persistentVolumnClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tax-calculator
spec:
  selector:
    app: postgres
  posts:
    - port: 5432
